[gd_scene load_steps=10 format=2]

[ext_resource path="res://Art/frames/chest_empty_open_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Objects/Combinations/bowChest.gd" type="Script" id=2]
[ext_resource path="res://Art/frames/chest_empty_open_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Chatboxes/my_theme.theme" type="Theme" id=4]
[ext_resource path="res://Sounds/Effects/01_chest_open_1.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "popout"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, -12 ), Vector2( 0, -16 ), Vector2( 0, -16 ), Vector2( 0, -4 ), Vector2( 0, 4 ), Vector2( 0, 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}

[node name="bowChest" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="ChestArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChestArea"]
shape = SubResource( 1 )

[node name="Opened" type="Sprite" parent="ChestArea"]
texture = ExtResource( 3 )

[node name="Closed" type="Sprite" parent="ChestArea"]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/popout = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
visible = false

[node name="ItemTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
margin_top = -72.0
margin_right = 160.0
margin_bottom = -35.0
theme = ExtResource( 4 )
text = "Your bow can now shoot faster!"
autowrap = true

[node name="chestOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0
attenuation = 2.2974

[connection signal="body_entered" from="ChestArea" to="." method="_on_ChestArea_body_entered"]
[connection signal="body_exited" from="ChestArea" to="." method="_on_ChestArea_body_exited"]
[connection signal="timeout" from="ItemTimer" to="." method="_on_ItemTimer_timeout"]
